--- a/HushHunt.Maui/HushHunt.Maui.csproj
+++ b/HushHunt.Maui/HushHunt.Maui.csproj
@@ -60,6 +60,7 @@
 	  <None Remove="Resources\Images\background1.png" />
 	  <None Remove="Resources\Images\Backgrounds\background1.png" />
 	  <None Remove="Resources\Images\Backgrounds\backgrounds1.png" />
+	  <None Remove="Resources\Images\flexlayout_background.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -69,7 +70,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\GamePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
